[gd_scene load_steps=2 format=3 uid="uid://screen_run_history"]

[ext_resource type="Script" path="res://scripts/ui/screens/run_history_screen.gd" id="1_v8gk5"]

[node name="RunHistoryScreen" type="Control"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_v8gk5")

[node name="Margin" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="VBox" type="VBoxContainer" parent="Margin"]
theme_override_constants/separation = 12

[node name="Header" type="HBoxContainer" parent="Margin/VBox"]
theme_override_constants/separation = 12

[node name="Title" type="Label" parent="Margin/VBox/Header"]
text = "Run History"
theme_override_font_sizes/font_size = 28
size_flags_horizontal = 3

[node name="BackButton" type="Button" parent="Margin/VBox/Header"]
unique_name_in_owner = true
text = "Back"
size_flags_horizontal = 1

[node name="Scroll" type="ScrollContainer" parent="Margin/VBox"]
size_flags_vertical = 3

[node name="HistoryList" type="VBoxContainer" parent="Margin/VBox/Scroll"]
unique_name_in_owner = true
theme_override_constants/separation = 8
[node name="ClearHistoryButton" type="Button" parent="Margin/VBox/Header"]
unique_name_in_owner = true
text = "Clear"
size_flags_horizontal = 1
